# CppBless

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
.cmake/api/v1/reply/: cache-v2-50f0cc05563e78195ede.json  cmakeFiles-v1-ebe676cbbec483120aee.json  codemodel-v2-f275917ed3b42f55483b.json  index-2024-08-30T19-14-08-0922.json  target-Bless-Debug-dfc132a38d9acc34aa79.json  target-Demo-Debug-347142c829808e23df1b.json
examples/: CMakeLists.txt  Demo  Demo.cpp  Makefile  cmake_install.cmake
include/: Bless.hpp  Glyph.hpp  Terminal.hpp
src/: Terminal.cpp
src/linux/: Terminal.cpp
src/windows/: Terminal.cpp
